--- a/CareNow/src/app/component/add-pharmacist/add-pharmacist.component.css
+++ b/CareNow/src/app/component/add-pharmacist/add-pharmacist.component.css
@@ -1,69 +1,180 @@
-input[type=text], select {
+input[type=text], select, textarea{
   width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
+  padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  resize: vertical;
+  
+}
+input[type=date], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+  
+}
+input.ng-valid
+{
+  border: 2px solid rgb(1, 197, 1);
 }
 
-input[type=submit] {
+
+
+input.ng-invalid
+{
+  border: 2px solid red;
+} 
+
+input.ng-untouched
+{
+  background-color: rgb(255, 255, 255);
+  border: 2px solid white;
+}
+
+input[type=date] {
+  text-align: right;
+}
+
+input[type="date"]:before {
+  color: lightgrey;
+  content: attr(placeholder) !important;
+  margin-right: 0.5em;
+}
+
+input[type="date"]:before {
+  color: lightgrey;
+  content: attr(placeholder) !important;
+  margin-right: 0.5em;
+}
+input[type="date"]:focus:before {
+  content: '' !important;
+}
+
+.inputx[type=text], select, textarea{
+  width: 100%;
+  padding: 12px;
+
+  background-color: #fdfdfd;
+  border-radius: 4px;
+ 
+  resize: vertical;
+
+}
+
+input[type=text]:focus {
+  background-color: rgb(248, 248, 248);
+  border: 2px solid rgb(150, 27, 27);
   
-  background-color: #4CAF50;
+  
+}
+
+input[type=date]:focus {
+  background-color: rgb(248, 248, 248);
+  border: 2px solid rgb(150, 27, 27);
+  
+  
+}
+
+
+/* Style the submit button */
+.submit {
+  background-color: #298588;
   color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
+  padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  position:relative;
+  margin-left: 40%;
+  margin-top: 23px;
 }
 
-input[type=submit]:hover {
-  background-color: #45a049;
-}
 
-div {
+
+/* Style the container */
+.container {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
-}
-
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  
-  font-size: 16px;
-  margin-top: 20px;
-  margin-left: 100px;
-}
-
-.buttonDel {
-  background-color: rgb(68, 6, 6); /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
+  width: 95%;
   display: inline-block;
-  font-size: 16px;
-  margin-top: 20px;
-  margin-left: 140px;
 }
 
-.meow {
+.container2 {
   border-radius: 5px;
-  background-color: #00000041;
+  background-color: rgba(180, 180, 180, 0.637);
   padding: 20px;
-  width: 50%;
-  align-self: center;
+  width: 40%;
+  margin-left: 30%;
+  display: inline-block;
+  
 }
 
+.container2r {
+  border-radius: 5px;
+  background-color: grey;
+  padding: 20px;
+  width: 40%;
+  margin-right: 5px;
+  margin-left: 30%;
+  display:inline-block;
+  margin-top: 20px;
+}
 
+.box {
+  border-radius: 5px;
+  background-color: grey;
+  padding: 20px;
+  width: 95%;
+  height: 120px;
+  display: inline-block;
+}
+.form {
+
+  margin-right: 110px;
+  background-color:#15151600;
+
+}
+.box1 {
+  border-radius: 5px;
+  background-color:#c8caf5;
+  padding: 40px;
+  width: 100%;
+  height: 20px;
+  display: inline-block;
+}
+
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 10%;
+  margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  margin-left: 2%;
+  width: 95%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
 
 .mainContent {
   position:absolute;
@@ -77,4 +188,5 @@ div {
   box-shadow:0 0px 0px 0 rgb(255, 255, 255);
   overflow: auto;
   padding:3% 2%;
+
 }
