--- a/CareNow/src/app/component/list-stockmanager/list-stockmanager.component.html
+++ b/CareNow/src/app/component/list-stockmanager/list-stockmanager.component.html
@@ -1,46 +1,151 @@
 <div class="mainContent">
 
-    <h2 style="font-family: Arial; margin-left:450px;"> Availiable Stock Managers
-    -</h2>
-    <div >
-      <table id="orders">
-        <tr>
-          <th>Empoyee ID</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>nic</th>
-          <th>Gender</th>
-          
-          <th>Contact Number </th>
-          <th>Email</th>
-          <th>DOB </th>
-          <th>Hired Date </th>
+  <h1 style="font-family: Arial; margin-left:500px;"> Availiable Stock Managers</h1>
+
+ 
+
+ <input class = "search" type = "text" [(ngModel)]="filterterm"
+  name= "keyword" placeholder="Search"/>
+
+  <select class = "inputx" name = "sortBy" [(ngModel)] = "filters.sortBy" (change) = "listStockmanager()" >
     
-        </tr>
-          
-             <tr  *ngFor="let stock of stockmanager">
-                  <td>{{stock.employeeId}}</td>
-                  <td >{{stock.firstName}}</td>
-                  <td >{{stock.lastName}}</td>
-                  <td >{{stock.nic}}</td>
-                  <td >{{stock.gender}}</td>
-                  <td >{{stock.contactNo}}</td>
-                  <td >{{stock.email}}</td>
-                  <td >{{stock.dob}}</td>
-                  <td >{{stock.hiredDate}}</td>
-                  
-  
-                  
-                  <td ><a routerLink="/editorder/{{order.employee_id}}">Edit</a></td>
-                  
-                  <td ><div class="row" (click)="deleteStockmanager(stock.employeeId)"  >
-                    <input type="submit" value="  Delete  " style="background-color: black;"></div></td>
-                  
-              
-             </tr> 
+      <option> FirstName </option>
+      <option> LastName </option>
+      <option> Email </option>
+      <option> DOB </option>
+      <option> Hired Date </option>
+
+  </select>
+  <button class = "export" (click) = "downloadPDF()"> Export PDF </button>
+  <button class = "export1" (click)="addStockManager()" > Add Stock Manager </button>
+
+  <div >
+  <table class= "orders" id ="contentToConvert">
+    <tr style="text-align:center; "  >
+      <th >Employee ID</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>NIC</th>
+      <th>Gender</th>
+      
+      <th>Contact Number </th>
+      <th>Address </th>
+      <th>Email</th>
+      <th>DOB </th>
+      <th>Hired Date </th>
+
+    </tr>
+      
+         <tr style="text-align:center; " *ngFor="let stock of stockmanager | filter:filterterm ">
+              <td>{{stock.employeeId}}</td>
+              <td >{{stock.firstName}}</td>
+              <td >{{stock.lastName}}</td>
+              <td >{{stock.nic}}</td>
+              <td >{{stock.gender}}</td>
+              <td >{{stock.contactNo}}</td>
+              <td >{{stock.address}}</td>
+              <td >{{stock.email}}</td>
+              <td >{{stock.dob}}</td>
+              <td >{{stock.hiredDate}}</td>
          
-      </table>  
-   
+               <button class = "delete" (click)="deleteStockmanager(stock.employeeId)"> Delete </button> 
+                <button class = "edit"  (click)="edit(stock)" > Edit </button>   
+               
+         </tr> 
+         
+  </table>  
 
 </div>
-  
+
+<div class="backShader" [style.display]="isDetVisible ? 'block' : 'none'">
+  <span class="close" (click)="closeDetail()">&times;</span>
+
+      <form (ngSubmit)="updateStockmanager()" name = "form" >
+
+        <div class="container2" >
+          <h1 style="font-family: Arial; color: white; margin-left: 150px;"> Update Stock Manager</h1>
+          <div class="row">
+            <div class="col-75">
+              <input type="text" name="firstName" [(ngModel)]="stockmanagerEdit.firstName"
+                                  placeholder="Enter Cashier name" />
+            </div>
+          </div>
+      
+          <div class="row">
+            <div class="col-75">
+              <input type="text" name="LastName" [(ngModel)]="stockmanagerEdit.lastName" 
+              placeholder="Enter LastName" />
+            </div>
+          </div>
+      
+          <div class="row">
+            <div class="col-75">
+                  <select name="gender" id="gender" [(ngModel)]="stockmanagerEdit.gender" >
+            
+                      <option selected value="Male">Male</option>
+                      <option value="Female">Female</option>
+            
+                      
+              </select>
+            </div>
+          </div>
+             <!--
+                  <div class="row">
+                    <div class="col-75">
+                      <input type="text" name="password" [(ngModel)]="this.password" 
+                                          placeholder="Enter Password"  required />
+                  
+                    </div>
+                  </div>
+              -->
+              <div class="row">
+                <div class="col-75">
+                  <input type="text" name="email" [(ngModel)]="stockmanagerEdit.email" 
+                  placeholder="Enter Email" />
+                </div>
+              </div>
+
+          <div class="row">
+            <div class="col-75">
+              <input type="text" name="nic" [(ngModel)]="stockmanagerEdit.nic" 
+              placeholder="Enter NIC" />
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-75">
+              <input type="text" name="contactno" [(ngModel)]="stockmanagerEdit.contactNo" 
+              placeholder="Enter Contact No" />
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-75">
+              <input type="text" name="email" [(ngModel)]="stockmanagerEdit.address" 
+              placeholder="Enter Address" />
+            </div>
+          </div>
+      
+          <div class="row">
+            <div class="col-75">
+              <input type="date" name="dob" [(ngModel)]="stockmanagerEdit.dob" 
+              placeholder="Enter DOB" />
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-75">
+              <input type="date" name="hiredDate" [(ngModel)]="stockmanagerEdit.hiredDate" 
+              placeholder="Enter Hired Date" />
+            </div>
+          </div>
+          
+      
+          <button type = "submit" class = "submit" >  Save   </button>          
+        
+        </div>  
+          </form>  
+        
+       
+</div>
+
