--- a/CareNow/src/app/addorder/addorder.component.css
+++ b/CareNow/src/app/addorder/addorder.component.css
@@ -1,7 +1,9 @@
+@import "~bootstrap/dist/css/bootstrap.css";  
+
 input[type=text], select, textarea{
   width: 100%;
   padding: 12px;
-  border: 1px solid rgb(208, 174, 211);
+  border: 1px solid #ff6d053b;
   border-radius: 4px;
   box-sizing: border-box;
   resize: vertical;
@@ -24,8 +26,8 @@ input[type=text], select, textarea{
 .inputx[type=text], select, textarea{
   width: 100%;
   padding: 12px;
-  border: 1px solid rgb(49, 58, 136);
-  background-color: #c8caf5;
+  border: 1px solid #ff6e05;
+  background-color: #ff6d053b;
   border-radius: 4px;
   box-sizing: border-box;
   resize: vertical;
@@ -35,7 +37,7 @@ input[type=text], select, textarea{
 .inputxo[type=date],  select, textarea{
   width: 100%;
   padding: 12px;
-  border: 1px solid rgb(208, 174, 211);
+  border: 1px solid #ff6d053b;
   border-radius: 4px;
   box-sizing: border-box;
   resize: vertical;
@@ -45,7 +47,7 @@ input[type=text], select, textarea{
 .inputxox[type=datetime-local],  select, textarea{
   width: 100%;
   padding: 12px;
-  border: 1px solid rgb(208, 174, 211);
+  border: 1px solid  #ff6d053b;
   border-radius: 4px;
   box-sizing: border-box;
   resize: vertical;
@@ -59,15 +61,25 @@ label {
 
 /* Style the submit button */
 input[type=submit] {
-  background-color: #4d54c2;
+  background-color: #ff6e05;
   color: white;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  position:relative;
+  position:flex;
   margin-left: 35%;
   margin-top: 23px;
+}
+
+input:optional {
+  border-color: rgb(211, 214, 17);
+}
+input:required {
+  border-color: rgb(5, 112, 1);
+}
+input:invalid {
+  border-color: red;
 }
 
 
@@ -83,7 +95,7 @@ input[type=submit] {
 
 .container2 {
   border-radius: 5px;
-  background-color: #4d54c2;
+  background-color: #ff6d053b;
   padding: 20px;
   width: 40%;
   margin-left: 30%;
@@ -93,7 +105,7 @@ input[type=submit] {
 
 .container2r {
   border-radius: 5px;
-  background-color: #4d54c2;
+  background-color: #ff6e05;
   padding: 20px;
   width: 40%;
   margin-right: 5px;
@@ -104,7 +116,7 @@ input[type=submit] {
 
 .box {
   border-radius: 5px;
-  background-color: #4d54c2;
+  background-color: #ff6e05;
   width: 40%;
   height: 60px;
   padding: 6px;
@@ -140,4 +152,12 @@ input[type=submit] {
     width: 100%;
     margin-top: 0;
   }
+}
+
+.meow {
+  border-radius: 5px;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
 }
