--- a/CareNow/src/app/addsupplier/addsupplier.component.css
+++ b/CareNow/src/app/addsupplier/addsupplier.component.css
@@ -1,11 +1,40 @@
 input[type=text], select, textarea{
   width: 100%;
   padding: 12px;
-  border: 1px solid rgb(208, 174, 211);
+  border: 1px solid  #ff6d053b;
   border-radius: 4px;
   box-sizing: border-box;
   resize: vertical;
 }
+
+input[type=number], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid  #ff6d053b;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+input[type=email], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid  #ff6d053b;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+input:optional {
+  border-color: rgb(211, 214, 17);
+}
+input:required {
+  border-color: rgb(5, 112, 1);
+}
+input:invalid {
+  border-color: red;
+}
+
 
 .mainContent {
   position:absolute;
@@ -24,8 +53,19 @@ input[type=text], select, textarea{
 .inputx[type=text], select, textarea{
   width: 100%;
   padding: 12px;
-  border: 1px solid rgb(49, 58, 136);
-  background-color: #c8caf5;
+  border: 1px solid  #ff6e05;
+  background-color: #ff6d053b;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+
+}
+
+.inputx[type=email], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid  #ff6e05;
+  background-color: #ff6d053b;
   border-radius: 4px;
   box-sizing: border-box;
   resize: vertical;
@@ -39,7 +79,7 @@ label {
 
 /* Style the submit button */
 input[type=submit] {
-  background-color: #4d54c2;
+  background-color: #ff6e05;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -55,7 +95,7 @@ input[type=submit] {
 /* Style the container */
 .container {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   padding: 20px;
   width: 95%;
   display: inline-block;
@@ -63,7 +103,7 @@ input[type=submit] {
 
 .container2 {
   border-radius: 5px;
-  background-color: #4d54c2;
+  background-color: #ff6d053b;
   padding: 20px;
   width: 40%;
   margin-left: 30%;
@@ -73,7 +113,7 @@ input[type=submit] {
 
 .container2r {
   border-radius: 5px;
-  background-color: #4d54c2;
+  background-color: #ff6e05;
   padding: 20px;
   width: 40%;
   margin-right: 5px;
@@ -84,7 +124,7 @@ input[type=submit] {
 
 .box {
   border-radius: 5px;
-  background-color: #4d54c2;
+  background-color: #ff6e05;
   width: 40%;
   height: 60px;
   padding: 6px;
@@ -119,5 +159,13 @@ input[type=submit] {
   .col-25, .col-75, input[type=submit] {
     width: 100%;
     margin-top: 0;
+  }
+
+  .meow {
+    border-radius: 5px;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
   }
 }
