--- a/CareNow/src/app/listorder/listorder.component.css
+++ b/CareNow/src/app/listorder/listorder.component.css
@@ -8,6 +8,7 @@
     border: 1px solid #ddd;
     padding: 8px;
   }
+
   .mainContent {
     position:absolute;
     top:13%;
@@ -24,28 +25,29 @@
   
   #orders tr:nth-child(even){background-color: #f2f2f2;}
   
-  #orders tr:hover {background-color: rgb(169, 161, 241);}
+  #orders tr:hover {background-color:  #ff6d053b;}
   
   #orders th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #5547cc;
+    background-color: #ff6e05;
     color: white;
   }
   
 .addo {
   border-radius: 5px;
-  background-color:  rgb(169, 161, 241);
+  background-color:  #ff6d053b;
   padding: 20px;
   width: 30%;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 20px;
-  
 }
 .addo2 {
   border-radius: 5px;
-  background-color:  rgb(169, 161, 241);
+  background-color: #ff6d053b;
   padding: 20px;
   width: 20%;
   margin-left: 40%;
@@ -56,7 +58,7 @@
 
 /* Style the submit button */
 input[type=submit] {
-  background-color: #4d54c2;
+  background-color: #ff6e05;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -81,8 +83,7 @@ input[type=text] {
 
 .addo3 {
   border-radius: 5px;
-  background-color:  rgba(169, 161, 241, 0.356);
-  padding-left: 17%;
+  background-color: #ff6d053b;
   width: 100%;
   display: flexbox;
   
@@ -90,7 +91,133 @@ input[type=text] {
 
 .meow {
   border-radius: 5px;
-  width: 60%;
-  margin-left: 30%;
-  display: flexbox;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+}
+
+
+
+/* Dashed red border */
+.hr {
+  border-top: 2px dashed rgb(0, 0, 0);
+}
+
+.imagediv{
+  border: 1px solid #ff6e05;
+  border-width: 4px;
+  background-color: #ff6e05;
+  border-radius: 6px;
+  padding: 5px;
+  width: 100%;
+  height: 70px;
+  display: flex;
+
+}
+
+.im{
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    padding: 5px;
+    width: 60px;
+    height: 60px;
+}
+
+
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  height: 100px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
