--- a/CareNow/src/app/listsupplier/listsupplier.component.css
+++ b/CareNow/src/app/listsupplier/listsupplier.component.css
@@ -1,9 +1,39 @@
 
+/* Dashed red border */
+.hr {
+  border-top: 2px dashed rgba(0, 0, 0, 0.671);
+}
+
+.imagediv{
+  border: 1px solid #ff6e05;
+  border-width: 4px;
+  background-color: #ff6e05;
+  border-radius: 6px;
+  padding: 5px;
+  width: 100%;
+  height: 70px;
+  display: flex;
+
+}
+
+.im{
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    padding: 5px;
+    width: 60px;
+    height: 60px;
+}
 #suppliers {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
+
+#suppliers td, #suppliers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
 .mainContent {
   position:absolute;
   top:13%;
@@ -17,35 +47,34 @@
   overflow: auto;
   padding:3% 2%;
 }
-#suppliers td, #suppliers th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
+
 
 #suppliers tr:nth-child(even){background-color: #f2f2f2;}
 
-#suppliers tr:hover {background-color: rgb(169, 161, 241);}
+#suppliers tr:hover {background-color:  #ff6d053b;}
 
 #suppliers th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #5547cc;
+  background-color: #ff6e05;
   color: white;
 }
 
 .addo {
   border-radius: 5px;
-  background-color:  rgb(169, 161, 241);
+  background-color:  #ff6d053b;
   padding: 20px;
   width: 30%;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 20px;
   
 }
 .addo2 {
   border-radius: 5px;
-  background-color:  rgb(169, 161, 241);
+  background-color: #ff6d053b;
   padding: 20px;
   width: 20%;
   margin-left: 40%;
@@ -56,7 +85,7 @@
 
 /* Style the submit button */
 input[type=submit] {
-  background-color: #4d54c2;
+  background-color: #ff6e05;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -69,7 +98,7 @@ input[type=submit] {
 
 input[type=text] {
   background-color: white;
-  width: 15%;
+  width: 10%;
   padding: 12px;
   padding-right: 20px;
   border: none;
@@ -81,8 +110,8 @@ input[type=text] {
 
 .addo3 {
   border-radius: 5px;
-  background-color:  rgba(169, 161, 241, 0.356);
-  padding-left: 17%;
+  background-color:  #ff6d053b;
+
   width: 100%;
   display: flexbox;
   
@@ -90,7 +119,8 @@ input[type=text] {
 
 .meow {
   border-radius: 5px;
-  width: 60%;
-  margin-left: 30%;
-  display: flexbox;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
 }
