--- a/CareNow/src/app/components/patient-records/patient-records.component.html
+++ b/CareNow/src/app/components/patient-records/patient-records.component.html
@@ -253,7 +253,7 @@
 
   <div style="overflow:auto;margin-top:20px; ">
     <div style="float:Left;">
-      <button class="buttonAddPat" style="background-color: brown;" type="button">Quick Demo</button>
+      <button class="buttonAddPat" style="background-color: brown;" type="button" (click)="demoSubmit()">Quick Demo</button>
     </div>
     <div style="float:right;">
       <button class="buttonAddPat" type="button" id="AddPatprevBtn" (click)="nextPrev(-1,addPatForm)">Previous</button>
